--- a/ip_libs/css/ipContent/less/ipContent/ipWidget/IpLogoGallery.less
+++ b/ip_libs/css/ipContent/less/ipContent/ipWidget/IpLogoGallery.less
@@ -1,4 +1,6 @@
 .ipWidget-IpLogoGallery {
+    margin-bottom: (@ipWidgetSpace - @ipGallerySpace); // fixing bottom margin between widgets
+
     ul {
         list-style: none;
         margin: 0 -(@ipGallerySpace / 2); // hack to keep images visually from border to border
